fix: library gap and title

--- a/modules/ui_icons_library/css/ui_icons_library.admin.css
+++ b/modules/ui_icons_library/css/ui_icons_library.admin.css
@@ -12,8 +12,8 @@
 
 .ui-icons-grid {
   display: grid;
-  grid-gap: 10px;
-  margin: 10px 0;
+  grid-gap: 6px;
+  margin: 6px 0;
 }
 
 @media (min-width: 480px) {
